--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,13 +38,14 @@ a {
 //----------------
 section {
     height: 100vh;
-    padding: 60px 23px;
+    padding: 20px 23px;
     background-image: url('../images/pattern-background-desktop.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-color: $Paleblue;
 }
 .card {
+    transform: scale(0.88);
     width: 385px;
     height: auto;
     background-color: $whitecolor;
